--- a/Makefile.common
+++ b/Makefile.common
@@ -28,6 +28,7 @@ objects = \
 	src/color_chart.o \
 	src/color_picker.o \
 	src/compress.o \
+	src/controller_select_dialog.o \
 	src/current_generator.o \
 	src/custom_object_widget.o \
 	src/data_blob.o \
@@ -108,6 +109,7 @@ objects = \
 	src/isochunk.o \
 	src/isoworld.o \
 	src/joystick.o \
+	src/joystick_configure_dialog.o \
 	src/json_parser.o \
 	src/json_tokenizer.o \
 	src/key_button.o \
